# sandcastle

./: .gitignore  CHANGELOG.md  CONTEXT.md  ONBOARDING.md  PR_DESCRIPTION.md  README.md  UBIQUITOUS_LANGUAGE.md  package-lock.json  package.json  tsup.config.ts  vitest.config.ts
.changeset/: add-claude-code-vertex-provider.md  add-cloudflare-sandbox.md  add-codex-agent-provider.md  add-gitlab-backlog-manager.md  add-minimax-agent.md  add-pi-agent-provider.md  add-vcs-abstraction.md  bundled-zod-planner-templates.md  calm-files-divide.md  capture-claude-subagent-logs.md  claude-code-xhigh-effort.md  cli-non-interactive-init.md  cool-coders-build.md  devin-agent-provider.md  docker-compose-provider.md  docker-context-option.md  docker-ports-option.md  fix-codex-sandbox-auth.md  fix-concurrent-worktree-prune-race.md  fix-docker-gid-collision.md  fix-macos-gid-conflict.md  fix-missing-effect-dependencies.md  fix-windows-mounts-create-sandbox.md  fix-windows-worktree-and-copy.md  fuzzy-linear-labels.md  gemini-cli-support.md  gitea-forgejo-backlog.md  gitea-forgejo-tea-backlog.md  gitlab-backlog-manager.md  harden-dockerfile-templates.md  init-build-recover.md  init-install-zod.md  init-non-interactive-flags.md  linear-backlog-manager.md  linear-tracker.md  merge-gate-on-branch-ahead-of-main.md  namespace-option.md  opencode-crofai-support.md  (+13 more)
rust/: Cargo.toml
rust/src/: errors.rs  fs_utils.rs  git.rs  lib.rs  main.rs  orchestrator.rs
rust/src/agents/: claude_code.rs  mod.rs  traits.rs
rust/src/sandboxes/: docker.rs  mod.rs  no_sandbox.rs  traits.rs
src/: cli.test.ts  (+49 more)
(+104 files in other folders)
