[package]
name = "sandcastle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bollard = "0.21.0"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
mockall = "0.14.0"
